# ywatchy

./: .gitignore  Cargo.toml  README.md  ywatchy.toml
src/: config.rs  main.rs  print.rs  skills.rs  sync.rs  watcher.rs
